<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_startup_image"
        android:scaleType="centerCrop"
        android:src="@drawable/oscarwithtrulsandkallberg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="32dp"
        android:shadowColor="#CC000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="8"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTapToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="24dp"
        android:shadowColor="#B3000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:textSize="24sp"
        android:text="@string/splash_tap_to_continue"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@android:color/white" />

</FrameLayout>





